--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
+<head>
   <title>Careers</title>
-  <meta charset="UTF-8">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/icons/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./img/icons/favicon/site.webmanifest">
-  <link rel="mask-icon" href="./img/icons/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#000000">
-  <meta name="theme-color" content="#ffffff">
+  <meta charset="UTF-8" />
+  <meta name="format-detection" content="telephone=no" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="./img/icons/favicon/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./img/icons/favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./img/icons/favicon/favicon-16x16.png"
+  />
+  <!-- <link rel="manifest" href="./img/icons/favicon/site.webmanifest" /> -->
+  <link
+    rel="mask-icon"
+    href="./img/icons/favicon/safari-pinned-tab.svg"
+    color="#5bbad5"
+  />
+  <meta name="msapplication-TileColor" content="#000000" />
+  <meta name="theme-color" content="#ffffff" />
   <!-- <meta name="robots" content="noindex, nofollow"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
+
+
+<body>
+  <div class="wrapper">
+    <header class="header _lp">
   <div class="header__content _container">
     <div class="header__logo logo">
       <div class="logo__image">
-        <img src="./img/icons/logoStar.svg" alt="star">
+        <img src="./img/icons/logoStar.svg" alt="star" />
       </div>
       <div class="logo__text">
-        <img src="./img/icons/logoText.svg" alt="Betterhand finantial technologies">
+        <img src="./img/icons/logoText.svg" alt="Betterhand finantial technologies" />
       </div>
     </div>
     <div class="header__menu menu">
@@ -35,23 +55,30 @@
       </div>
       <nav class="menu__body">
         <ul class="menu__list">
-          <li><a data-goto=".careers-page__section_expertise" data-text='Expertise' href="#expertise" class="menu__link _goto-block">Expertise</a></li>
-          <li><a data-goto=".careers-page__section_about" data-text='About' href="#about" class="menu__link _goto-block">About</a></li>
-          <li><a data-goto=".careers-page__section_vacancies" data-text='Careers' href="#vacancies" class="menu__link _goto-block">Careers</a></li>
-          <li><a data-goto=".careers-page__section_contact" data-text='Contact' href="#contact" class="menu__link _goto-block">Contact</a></li>
+          <li>
+            <a data-text="Expertise" href="#expertise" class="menu__link">Expertise</a>
+          </li>
+          <li>
+            <a data-text="About" href="#about" class="menu__link">About</a>
+          </li>
+          <li>
+            <a data-text="Careers" href="#vacancies" class="menu__link">Careers</a>
+          </li>
+          <li>
+            <a data-text="Contact" href="#contact" class="menu__link">Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
   </div>
 </header>
-			<main class="page">
-        <div class="careers-page">
+    <main class="page"><div class="careers-page">
   <div class="careers-page__container _container">
 
     <section class="careers-page__section careers-page__section_intro intro">
       <div class="intro__body">
-        <h1 class="intro__title">Careers</h1>
-        <div class="intro__text">
+        <h1 class="intro__title main-title">Careers</h1>
+        <div class="intro__text text">
           The only way to win on modern markets is constant enhancement.<br />
           And the only way to keep sustainable enhancement is coherent
           collaboration of highly talented people.
@@ -100,12 +127,12 @@
       </div>
     </section>
 
-    <section class="careers-page__section careers-page__section_about about">
-      <div class="about__body">
-        <p class="about__paragraph">
+    <section class="careers-page__section careers-page__section_about about-company">
+      <div class="about-company__body">
+        <p class="about-company__paragraph">
           We are a team of like-minded people who value talent applied in the right way to the right problems, in the atmosphere of collaboration and creativity.
         </p>
-        <p class="about__paragraph">
+        <p class="about-company__paragraph">
           We value deep expertise, systematic approach and can-do attitude, strong professional ethics and team collaboration, openness and respect in communication.
         </p>
       </div>
@@ -136,6 +163,7 @@
 
     <section class="careers-page__section careers-page__section_contact contact">
       <div class="contact__body">
+
         <div class="contact__top hr-manager">
           <div class="hr-manager__inner">
             <div class="hr-manager__column hr-manager__column_info">
@@ -148,82 +176,105 @@
                 </a>
               </div>
             </div>
+
             <div class="hr-manager__column hr-manager__column_photo">
               <div class="hr-manager__photo">
                 <div class="hr-manager__image">
                   <img class="hexImage" src="./img/Careers/hrPhoto.jpg" alt="smiling girl hr">
                 </div>
-                <img src="./img/Careers/hrSmallHex.svg" alt="hexagon" class="hr-manager__smallhex">
-                <img src="./img/Careers/hrBigHex.svg" alt="hexagon" class="hr-manager__bighex">
+                <div class="hr-manager__smallhex-wrapper">
+                  <img src="./img/Careers/hrSmallHex.svg" alt="hexagon" class="hr-manager__smallhex">
+                </div>
+                <div class="hr-manager__bighex-wrapper">
+                  <img src="./img/Careers/hrBigHex.svg" alt="hexagon" class="hr-manager__bighex">
+                </div>
               </div>
             </div>
           </div>
         </div>
+
         <div class="contact__bottom bottom-contact">
           <div class="bottom-contact__form form-contact">
             <h3 class="form-contact__title">Or fill out this form:</h3>
 
             <form class="form" action="#" enctype="multipart/form-data">
+              <div class="form__body">
+                
+                <div class="form__line">
+                  <label for="name" class="form__label">My name is</label>
+                  <input id="name" name='name' autocomplete="off" type="text" data-error="This field is required" data-value="" class="form__input input input__name _req">
+                </div>
 
-              <div class="form__line">
-                <label for="name" class="form__label">My name is</label>
-                <input id="name" name='name' autocomplete="off" type="text" data-error="This field is required" data-value="" class="form__input input input__name _req">
-              </div>
+                <div class="form__line">
+                  <label for="profession" class="form__label">I'm a/an</label>
+                  <div class="form__line-container">
+                    <input id="profession" name="profession" autocomplete="off" type="text" data-error="This field is required" data-value="" placeholder="" class="form__input input _req">
+                    <span class="form__mark">.</span>
+                  </div>
+                </div>
 
-              <div class="form__line">
-                <label for="profession" class="form__label">I'm a/an</label>
-                <!-- Todo: change container class according to BEM -->
-                <div class="textarea-line__container">
-                  <input id="profession" name="profession" autocomplete="off" type="text" data-error="This field is required" data-value="" placeholder="" class="input textarea-line__input _req">
-                  <span class="form__mark">.</span>
+                <div class="form__line">
+                  <label for="cv" class="form__label">Please see my CV</label>
+                  <div class="file">
+                    <input id="cv" name="cv" class="file__input" autocomplete="off" type="file" data-error="File size exceeds 5mb, please try another" data-value="">
+                    <div class="file__label">
+                      <div class="file__image">
+                        <div class="file__upload">
+                          <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17 6.5L12 1.5L7 6.5" stroke="white" stroke-miterlimit="10" />
+                            <path d="M12 1.5L12 17.5" stroke="white" stroke-miterlimit="10" />
+                            <path d="M1 16.5V21.5H23V16.5" stroke="white" stroke-miterlimit="10" />
+                          </svg>
+                        </div>
+                        <div class="file__paperclip">
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M23.2635 7.73654L10.8891 20.1109C8.7412 22.2588 5.2588 22.2588 3.11091 20.1109V20.1109C0.963029 17.963 0.963029 14.4806 3.11091 12.3327L11.7093 3.73432C13.0762 2.36749 15.2922 2.36749 16.6591 3.73432V3.73432C18.0259 5.10116 18.0259 7.31723 16.6591 8.68407L8.57607 16.7671C7.93995 17.4032 6.90858 17.4032 6.27245 16.7671V16.7671C5.63633 16.1309 5.63633 15.0996 6.27245 14.4635L12.8429 7.89304" stroke="black" />
+                          </svg>
+                        </div>
+                        <div class="file__loading">
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7.99935 1.33341C6.68081 1.33341 5.39188 1.72441 4.29555 2.45695C3.19922 3.18949 2.34474 4.23068 1.84015 5.44886C1.33557 6.66703 1.20355 8.00748 1.46078 9.30068C1.71801 10.5939 2.35295 11.7818 3.2853 12.7141C4.21765 13.6465 5.40554 14.2814 6.69875 14.5386C7.99195 14.7959 9.3324 14.6639 10.5506 14.1593C11.7687 13.6547 12.8099 12.8002 13.5425 11.7039C14.275 10.6076 14.666 9.31862 14.666 8.00008" stroke="#1D4BEF" stroke-miterlimit="16" stroke-linecap="square" stroke-linejoin="round" />
+                          </svg>
+                        </div>
+                      </div>
+                      <span class="file__text">Upload file</span>
+                    </div>
+                  </div>
+                  <span class="form__maxsize">(5mb max)</span>
+                </div>
+
+                <div class="form__line form__line_textarea">
+                  <label for="aboutMyself" class="form__label form__label_textarea textarea__label">I can say about myself that</label>
+                  <div class="form__line-container">
+                    <textarea id="aboutMyself" name="aboutMyself" autocomplete="off" type="text" data-error="This field is required" data-value="" placeholder="(tell us about yourself)" class="form__input form__input_textarea input _req"></textarea>
+                    <span class="form__mark">.</span>
+                  </div>
+                </div>
+
+                <div class="form__line">
+                  <label for="mail" class="form__label">Would you email me at</label>
+                  <div class="form__line-container">
+                    <input id="mail" name="mail" autocomplete="off" type="text" data-error="This field is required" data-value="" class="form__input input input__name _req">
+                    <span class="form__mark">?</span>
+                  </div>
                 </div>
               </div>
 
-              <div class="form__line">
-                <label for="cv" class="form__label">Please see my CV</label>
-                <div class="file">
-                  <input id="cv" name="cv" class="file__input" autocomplete="off" type="file" data-error="File size exceeds 5mb, please try another" data-value="">
-                  <div for="cv" class="file__label">Upload file</div>
-                </div>
-                <span class="form__maxsize">(5mb max)</span>
-              </div>
-
-              <div class="form__line form__line_textarea textarea-line">
-                <label for="about" class="form__label textarea-line__label">I can say about myself that</label>
-                <input id="about" name="about" autocomplete="off" type="text" data-error="This field is required" data-value="" placeholder="(tell us about yourself)" class="form__input input textarea-line__input _req">
-                <div class="textarea-line__container">
-                  <input autocomplete="off" type="text" data-error="" data-value="" placeholder="" class="input textarea-line__input _req">
-                  <span class="form__mark">.</span>
-                </div>
-              </div>
-
-              <div class="form__line">
-                <label for="mail" class="form__label">Would you email me at</label>
-                <!-- Todo: change container class according to BEM -->
-                <div class="textarea-line__container">
-                  <input id="mail" name="mail" autocomplete="off" type="text" data-error="This field is required" data-value="" class="form__input input input__name _req email">
-                  <span class="form__mark">?</span>
-                </div>
-              </div>
-
-              <div class="form__button button-form">
-                <button type="submit" class="button-form__item">
-                  <span class="button-form__body">
-                    <span class="button-form__text">
-                      Submit request
-                    </span>
-                    <span class="button-form__bg"></span>
+              <div class="form__button">
+                <div class="button">
+                  <span class="button-wrapper">
+                    <button href="#" class="animated-button">Submit request</button>
                   </span>
-                </button>
+                </div>
               </div>
+
             </form>
           </div>
         </div>
     </section>
   </div>
-</div>
-			</main>
-			<footer class="footer">
+</div></main>
+    <footer class="footer">
   <div class="footer__container _container">
     <div class="footer__row">
       <div class="footer__top top-footer">
@@ -262,33 +313,11 @@
     </div>
   </div>
 </footer>
-		</div>
-		<div class="popup popup_popup">
-	<div class="popup__content">
-		<div class="popup__body">
-			<div class="popup__close"></div>
-		</div>
-	</div>
-</div>
-<div class="popup popup_massagename-message">
-	<div class="popup__content">
-		<div class="popup__body">
-			<div class="popup__close"></div>
-		</div>
-	</div>
-</div>
-<div class="popup popup_video">
-	<div class="popup__content">
-		<div class="popup__body">
-			<div class="popup__close popup__close_video"></div>
-			<div class="popup__video _video"></div>
-		</div>
-	</div>
-</div>
-
-		<!-- Swiper -->
+  </div>
+  <!-- Swiper -->
 <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
-	</body>
+</body>
+
 </html>
